--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -1,55 +1,3 @@
-// Display
-
-$displays: "block" "flex" "inline" "inline-block" "inline-flex";
-
-@each $display in $displays {
-  .is-#{$display} {
-    display: #{$display};
-  }
-
-  .is-#{$display}-mobile {
-    @include mobile {
-      display: #{$display} !important;
-    }
-  }
-
-  .is-#{$display}-tablet {
-    @include tablet {
-      display: #{$display} !important;
-    }
-  }
-
-  .is-#{$display}-tablet-only {
-    @include tablet-only {
-      display: #{$display} !important;
-    }
-  }
-
-  .is-#{$display}-touch {
-    @include touch {
-      display: #{$display} !important;
-    }
-  }
-
-  .is-#{$display}-desktop {
-    @include desktop {
-      display: #{$display} !important;
-    }
-  }
-
-  .is-#{$display}-desktop-only {
-    @include desktop-only {
-      display: #{$display} !important;
-    }
-  }
-
-  .is-#{$display}-widescreen {
-    @include widescreen {
-      display: #{$display} !important;
-    }
-  }
-}
-
 // Float
 
 .is-clearfix {
@@ -57,11 +5,11 @@ $displays: "block" "flex" "inline" "inline-block" "inline-flex";
 }
 
 .is-pulled-left {
-  float: left;
+  float: left !important;
 }
 
 .is-pulled-right {
-  float: right;
+  float: right !important;
 }
 
 // Overflow
@@ -76,73 +24,230 @@ $displays: "block" "flex" "inline" "inline-block" "inline-flex";
   @include overlay;
 }
 
-// Text
+// Typography
+
+@each $size in $sizes {
+  $i: index($sizes, $size);
+
+  .is-size-#{$i} {
+    font-size: $size !important;
+  }
+
+  @include mobile {
+    .is-size-#{$i}-mobile {
+      font-size: $size !important;
+    }
+  }
+
+
+  @include tablet {
+    .is-size-#{$i}-tablet {
+      font-size: $size !important;
+    }
+  }
+
+
+  @include touch {
+    .is-size-#{$i}-touch {
+      font-size: $size !important;
+    }
+  }
+
+
+  @include desktop {
+    .is-size-#{$i}-desktop {
+      font-size: $size !important;
+    }
+  }
+
+
+  @include widescreen {
+    .is-size-#{$i}-widescreen {
+      font-size: $size !important;
+    }
+  }
+
+
+  @include fullhd {
+    .is-size-#{$i}-fullhd {
+      font-size: $size !important;
+    }
+  }
+}
 
 .has-text-centered {
-  text-align: center;
+  text-align: center !important;
 }
 
 .has-text-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .has-text-right {
-  text-align: right;
+  text-align: right !important;
+}
+
+@each $name, $pair in $colors {
+  $color: nth($pair, 1);
+
+  .has-text-#{$name} {
+    color: $color !important;
+  }
+
+  a.has-text-#{$name} {
+    &:hover,
+    &:focus {
+      color: darken($color, 10%);
+    }
+  }
+}
+
+@each $name, $shade in $shades {
+  .has-text-#{$name} {
+    color: $shade !important;
+  }
 }
 
 // Visibility
+
+$displays: "block" "flex" "inline" "inline-block" "inline-flex";
+
+@each $display in $displays {
+  .is-#{$display} {
+    display: #{$display};
+  }
+
+  @include mobile {
+    .is-#{$display}-mobile {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include tablet {
+    .is-#{$display}-tablet {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include tablet-only {
+    .is-#{$display}-tablet-only {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include touch {
+    .is-#{$display}-touch {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include desktop {
+    .is-#{$display}-desktop {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include desktop-only {
+    .is-#{$display}-desktop-only {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include widescreen {
+    .is-#{$display}-widescreen {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include widescreen-only {
+    .is-#{$display}-widescreen-only {
+      display: #{$display} !important;
+    }
+  }
+
+
+  @include fullhd {
+    .is-#{$display}-fullhd {
+      display: #{$display} !important;
+    }
+  }
+}
 
 .is-hidden {
   display: none !important;
 }
 
-.is-hidden-mobile {
-  @include mobile {
+@include mobile {
+  .is-hidden-mobile {
     display: none !important;
   }
 }
 
-.is-hidden-tablet {
-  @include tablet {
+
+@include tablet {
+  .is-hidden-tablet {
     display: none !important;
   }
 }
 
-.is-hidden-tablet-only {
-  @include tablet-only {
+
+@include tablet-only {
+  .is-hidden-tablet-only {
     display: none !important;
   }
 }
 
-.is-hidden-touch {
-  @include touch {
+
+@include touch {
+  .is-hidden-touch {
     display: none !important;
   }
 }
 
-.is-hidden-desktop {
-  @include desktop {
+
+@include desktop {
+  .is-hidden-desktop {
     display: none !important;
   }
 }
 
-.is-hidden-desktop-only {
-  @include desktop-only {
+
+@include desktop-only {
+  .is-hidden-desktop-only {
     display: none !important;
   }
 }
 
-.is-hidden-widescreen {
-  @include widescreen {
+
+@include widescreen {
+  .is-hidden-widescreen {
     display: none !important;
   }
 }
+
+
+@include widescreen-only {
+  .is-hidden-widescreen-only {
+    display: none !important;
+  }
+}
+
+
+@include fullhd {
+  .is-hidden-fullhd {
+    display: none !important;
+  }
+}
+
 
 // Other
-
-.is-disabled {
-  pointer-events: none;
-}
 
 .is-marginless {
   margin: 0 !important;
@@ -150,6 +255,14 @@ $displays: "block" "flex" "inline" "inline-block" "inline-flex";
 
 .is-paddingless {
   padding: 0 !important;
+}
+
+.is-radiusless {
+  border-radius: 0 !important;
+}
+
+.is-shadowless {
+  box-shadow: none !important;
 }
 
 .is-unselectable {
