--- a/scss/components/_level.scss
+++ b/scss/components/_level.scss
@@ -1,3 +1,54 @@
+.level {
+  @include block;
+
+  align-items: center;
+  justify-content: space-between;
+
+  code {
+    border-radius: $radius;
+  }
+
+  img {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  // Modifiers
+  &.is-mobile {
+    display: flex;
+
+    .level-left,
+    .level-right {
+      display: flex;
+    }
+
+    .level-left + .level-right {
+      margin-top: 0;
+    }
+
+    .level-item {
+      &:not(:last-child) {
+        margin-bottom: 0;
+      }
+
+      &:not(.is-narrow) {
+        flex-grow: 1;
+      }
+    }
+  }
+
+  // Responsiveness
+  @include tablet {
+    display: flex;
+
+    & > .level-item {
+      &:not(.is-narrow) {
+        flex-grow: 1;
+      }
+    }
+  }
+}
+
 .level-item {
   align-items: center;
   display: flex;
@@ -61,47 +112,5 @@
   // Responsiveness
   @include tablet {
     display: flex;
-  }
-}
-
-.level {
-  @include block;
-
-  align-items: center;
-  justify-content: space-between;
-
-  code {
-    border-radius: $radius;
-  }
-
-  img {
-    display: inline-block;
-    vertical-align: top;
-  }
-
-  // Modifiers
-  &.is-mobile {
-    display: flex;
-
-    & > .level-item {
-      &:not(:last-child) {
-        margin-bottom: 0;
-      }
-
-      &:not(.is-narrow) {
-        flex-grow: 1;
-      }
-    }
-  }
-
-  // Responsiveness
-  @include tablet {
-    display: flex;
-
-    & > .level-item {
-      &:not(.is-narrow) {
-        flex-grow: 1;
-      }
-    }
   }
 }
