--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,4 +1,4 @@
-$nav-height: 3.5rem !default;
+$nav-height: 3.25rem !default;
 
 // Components
 
@@ -18,6 +18,7 @@ $nav-height: 3.5rem !default;
   flex-shrink: 0;
   font-size: $size-normal;
   justify-content: center;
+  line-height: 1.5;
   padding: 0.5rem 0.75rem;
 
   a {
@@ -27,10 +28,6 @@ $nav-height: 3.5rem !default;
 
   img {
     max-height: 1.75rem;
-  }
-
-  .button + .button {
-    margin-left: 0.75rem;
   }
 
   .tag {
@@ -49,8 +46,8 @@ $nav-height: 3.5rem !default;
   }
 }
 
-.nav-item a,
-a.nav-item {
+.nav-item a:not(.button),
+a.nav-item:not(.button) {
   color: $text-light;
 
   &:hover {
@@ -65,10 +62,10 @@ a.nav-item {
   &.is-tab {
     border-bottom: 1px solid transparent;
     border-top: 1px solid transparent;
-    padding-bottom: calc(0.5rem - 1px);
+    padding-bottom: calc(0.75rem - 1px);
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: calc(0.5rem - 1px);
+    padding-top: calc(0.75rem - 1px);
 
     &:hover {
       border-bottom-color: $primary;
@@ -78,7 +75,7 @@ a.nav-item {
     &.is-active {
       border-bottom: 3px solid $primary;
       color: $primary;
-      padding-bottom: calc(0.5rem - 3px);
+      padding-bottom: calc(0.75rem - 3px);
     }
   }
 
@@ -92,47 +89,29 @@ a.nav-item {
 
 // Containers
 
-.nav-menu {
-  // Responsiveness
-  @include mobile {
-    background-color: $white;
-    box-shadow: 0 4px 7px rgba($black, 0.1);
-    left: 0;
-    display: none;
-    right: 0;
-    top: 100%;
-    position: absolute;
-
-    .nav-item {
-      border-top: 1px solid rgba($border, 0.5);
-      padding: 0.75rem;
-    }
-
-    &.is-active {
-      display: block;
-    }
-  }
-
-
-  @include tablet-only {
-    padding-right: 1.5rem;
-  }
-}
-
 .nav-left,
 .nav-right {
+  @include overflow-touch;
+
   align-items: stretch;
-  flex-basis: 0;
+  display: flex;
   flex-grow: 1;
   flex-shrink: 0;
+  max-width: 100%;
+  overflow: auto;
+
+  @include widescreen {
+    flex-basis: 0;
+  }
 }
 
 .nav-left {
-  display: flex;
   justify-content: flex-start;
-  overflow: hidden;
-  overflow-x: auto;
   white-space: nowrap;
+}
+
+.nav-right {
+  justify-content: flex-end;
 }
 
 .nav-center {
@@ -145,12 +124,27 @@ a.nav-item {
   margin-right: auto;
 }
 
-.nav-right {
-  justify-content: flex-end;
-
+.nav-menu {
   // Responsiveness
-  @include tablet {
-    display: flex;
+  @include mobile {
+    &.nav-right {
+      background-color: $white;
+      box-shadow: 0 4px 7px rgba($black, 0.1);
+      left: 0;
+      display: none;
+      right: 0;
+      top: 100%;
+      position: absolute;
+
+      .nav-item {
+        border-top: 1px solid rgba($border, 0.5);
+        padding: 0.75rem;
+      }
+
+      &.is-active {
+        display: block;
+      }
+    }
   }
 }
 
@@ -160,10 +154,10 @@ a.nav-item {
   align-items: stretch;
   background-color: $white;
   display: flex;
-  min-height: $nav-height;
+  height: $nav-height;
   position: relative;
   text-align: center;
-  z-index: 2;
+  z-index: 10;
 
   & > .container {
     align-items: stretch;
