--- a/scss/elements/_button.scss
+++ b/scss/elements/_button.scss
@@ -1,131 +1,52 @@
-$button: $grey-darker !default;
-$button-background: $white !default;
-$button-border: $grey-lighter !default;
+$button-color: $grey-darker !default;
+$button-background-color: $white !default;
+$button-border-color: $grey-lighter !default;
 
-$button-hover: $link-hover !default;
-$button-hover-border: $link-hover-border !default;
+$button-hover-color: $link-hover !default;
+$button-hover-border-color: $link-hover-border !default;
 
-$button-focus: $link-focus !default;
-$button-focus-border: $link-focus-border !default;
+$button-focus-color: $link-focus !default;
+$button-focus-border-color: $link-focus-border !default;
 
-$button-active: $link-active !default;
-$button-active-border: $link-active-border !default;
+$button-active-color: $link-active !default;
+$button-active-border-color: $link-active-border !default;
 
-$button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
+$button-link-color: $text !default;
+$button-link-hover-background-color: $background !default;
+$button-link-hover-color: $text-strong !default;
 
-@function buttonIconSpacing($button-font-size, $icon-width) {
-  // The rem height of the button
-  // based on a height of 2.5em
-  $button-height: 2.5 * $button-font-size;
+$button-disabled-background-color: $white !default;
+$button-disabled-border-color: $grey-lighter !default;
+$button-disabled-shadow: none !default;
+$button-disabled-opacity: 0.5 !default;
 
-  // The rem total horizontal padding of the button
-  $button-horizontal-padding: 2 * 0.75 * $button-font-size;
+$button-static-color: $grey !default;
+$button-static-background-color: $white-ter !default;
+$button-static-border-color: $grey-lighter !default;
 
-  // For the icon center to align with the button center
-  // the horizontal padding + the icon width must equal the button height
-  // $button-height = $button-horizontal-padding + $icon-width + $difference
-  $difference: $button-height - $button-horizontal-padding - $icon-width;
-
-  @return $difference / 2;
-}
-
-@mixin button-icon($button-font-size) {
-  $small-offset: buttonIconSpacing($button-font-size, 1rem);
-  $normal-offset: buttonIconSpacing($button-font-size, 1.5rem);
-  $medium-offset: buttonIconSpacing($button-font-size, 2rem);
-  $large-offset: buttonIconSpacing($button-font-size, 3rem);
-
-  .icon {
-    &:first-child:not(:last-child) {
-      margin-left: $normal-offset;
-      margin-right: $button-font-size / 2;
-    }
-
-    &:last-child:not(:first-child) {
-      margin-left: $button-font-size / 2;
-      margin-right: $normal-offset;
-    }
-
-    &:first-child:last-child {
-      // The -1px is to account for the button 1px border
-      margin-left: calc(-1px + #{$normal-offset});
-      margin-right: calc(-1px + #{$normal-offset});
-    }
-
-    &.is-small {
-      &:first-child:not(:last-child) {
-        margin-left: $small-offset;
-      }
-
-      &:last-child:not(:first-child) {
-        margin-right: $small-offset;
-      }
-
-      &:first-child:last-child {
-        margin-left: calc(-1px + #{$small-offset});
-        margin-right: calc(-1px + #{$small-offset});
-      }
-    }
-
-    &.is-medium {
-      &:first-child:not(:last-child) {
-        margin-left: $medium-offset;
-      }
-
-      &:last-child:not(:first-child) {
-        margin-right: $medium-offset;
-      }
-
-      &:first-child:last-child {
-        margin-left: calc(-1px + #{$medium-offset});
-        margin-right: calc(-1px + #{$medium-offset});
-      }
-    }
-
-    &.is-large {
-      &:first-child:not(:last-child) {
-        margin-left: $large-offset;
-      }
-
-      &:last-child:not(:first-child) {
-        margin-right: $large-offset;
-      }
-
-      &:first-child:last-child {
-        margin-left: calc(-1px + #{$large-offset});
-        margin-right: calc(-1px + #{$large-offset});
-      }
-    }
-  }
-}
+$button-shadow-inset: inset 0 1px 2px rgba($black, 0.2) !default;
 
 // The button sizes use mixins so they can be used at different breakpoints
 @mixin button-small {
   border-radius: $radius-small;
   font-size: $size-small;
-
-  @include button-icon($size-small);
 }
 
 @mixin button-medium {
   font-size: $size-medium;
-
-  @include button-icon($size-medium);
 }
 
 @mixin button-large {
   font-size: $size-large;
-
-  @include button-icon($size-large);
 }
 
 .button {
   @include control;
   @include unselectable;
 
-  background-color: $button-background;
-  border: 1px solid $button-border;
-  color: $button;
+  background-color: $button-background-color;
+  border-color: $button-border-color;
+  color: $button-color;
   cursor: pointer;
   justify-content: center;
   padding-left: 0.75em;
@@ -137,34 +58,57 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
     color: inherit;
   }
 
-  @include button-icon($size-normal);
+  .icon {
+    &,
+    &.is-small,
+    &.is-medium,
+    &.is-large {
+      height: 1.5em;
+      width: 1.5em;
+    }
+
+    &:first-child:not(:last-child) {
+      margin-left: calc(-0.375em - 1px);
+      margin-right: 0.1875em;
+    }
+
+    &:last-child:not(:first-child) {
+      margin-left: 0.1875em;
+      margin-right: calc(-0.375em - 1px);
+    }
+
+    &:first-child:last-child {
+      margin-left: calc(-0.375em - 1px);
+      margin-right: calc(-0.375em - 1px);
+    }
+  }
 
   // States
   &:hover,
   &.is-hovered {
-    border-color: $button-hover-border;
-    color: $button-hover;
+    border-color: $button-hover-border-color;
+    color: $button-hover-color;
   }
 
   &:focus,
   &.is-focused {
-    border-color: $button-focus-border;
-    box-shadow: 0 0 0.5em rgba($button-focus-border, 0.25);
-    color: $button-focus;
+    border-color: $button-focus-border-color;
+    box-shadow: 0 0 0.5em rgba($button-focus-border-color, 0.25);
+    color: $button-focus-color;
   }
 
   &:active,
   &.is-active {
-    border-color: $button-active-border;
+    border-color: $button-active-border-color;
     box-shadow: $button-shadow-inset;
-    color: $button-active;
+    color: $button-active-color;
   }
 
   // Colors
   &.is-link {
     background-color: transparent;
     border-color: transparent;
-    color: $text;
+    color: $button-link-color;
     text-decoration: underline;
 
     &:hover,
@@ -173,8 +117,14 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
     &.is-focused,
     &:active,
     &.is-active {
-      background-color: $background;
-      color: $text-strong;
+      background-color: $button-link-hover-background-color;
+      color: $button-link-hover-color;
+    }
+
+    &[disabled] {
+      background-color: transparent;
+      border-color: transparent;
+      box-shadow: none;
     }
   }
 
@@ -209,12 +159,25 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
         color: $color-invert;
       }
 
+      &[disabled] {
+        background-color: $color;
+        border-color: transparent;
+        box-shadow: none;
+      }
+
       &.is-inverted {
         background-color: $color-invert;
         color: $color;
 
         &:hover {
           background-color: darken($color-invert, 5%);
+        }
+
+        &[disabled] {
+          background-color: $color-invert;
+          border-color: transparent;
+          box-shadow: none;
+          color: $color;
         }
       }
 
@@ -235,6 +198,19 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
           border-color: $color;
           color: $color-invert;
         }
+
+        &.is-loading {
+          &:after {
+            border-color: transparent transparent $color $color !important;
+          }
+        }
+
+        &[disabled] {
+          background-color: transparent;
+          border-color: $color;
+          box-shadow: none;
+          color: $color;
+        }
       }
 
       &.is-inverted.is-outlined {
@@ -246,6 +222,13 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
         &:focus {
           background-color: $color-invert;
           color: $color;
+        }
+
+        &[disabled] {
+          background-color: transparent;
+          border-color: $color-invert;
+          box-shadow: none;
+          color: $color-invert;
         }
       }
     }
@@ -265,9 +248,11 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
   }
 
   // Modifiers
-  &[disabled],
-  &.is-disabled {
-    opacity: 0.5;
+  &[disabled] {
+    background-color: $button-disabled-background-color;
+    border-color: $button-disabled-border-color;
+    box-shadow: $button-disabled-shadow;
+    opacity: $button-disabled-opacity;
   }
 
   &.is-fullwidth {
@@ -281,9 +266,17 @@ $button-shadow-inset: inset 0 1px 2px rgba($black, 0.2);
 
     &:after {
       @include loader;
-      @include center(16px);
+      @include center(1em);
 
       position: absolute !important;
     }
+  }
+
+  &.is-static {
+    background-color: $button-static-background-color;
+    border-color: $button-static-border-color;
+    color: $button-static-color;
+    box-shadow: none;
+    pointer-events: none;
   }
 }
