--- a/scss/elements/_form.scss
+++ b/scss/elements/_form.scss
@@ -1,52 +1,57 @@
-$input: $grey-darker !default;
-$input-background: $white !default;
-$input-border: $grey-lighter !default;
+$input-color: $grey-darker !default;
+$input-background-color: $white !default;
+$input-border-color: $grey-lighter !default;
+$input-shadow: inset 0 1px 2px rgba($black, 0.1) !default;
 
-$input-hover: $grey-darker !default;
-$input-hover-border: $grey-light !default;
+$input-hover-color: $grey-darker !default;
+$input-hover-border-color: $grey-light !default;
 
-$input-focus: $grey-darker !default;
-$input-focus-border: $link !default;
+$input-focus-color: $grey-darker !default;
+$input-focus-border-color: $link !default;
 
-$input-disabled: $text-light !default;
-$input-disabled-background: $background !default;
-$input-disabled-border: $background !default;
+$input-disabled-color: $text-light !default;
+$input-disabled-background-color: $background !default;
+$input-disabled-border-color: $background !default;
 
 $input-arrow: $link !default;
 
-$input-icon: $grey-lighter !default;
-$input-icon-active: $grey !default;
+$input-icon-color: $grey-lighter !default;
+$input-icon-active-color: $grey !default;
 
 $input-radius: $radius !default;
+
+$label-color: $grey-darker !default;
+$label-weight: $weight-bold !default;
+
+$help-size: $size-small !default;
 
 @mixin input {
   @include control;
 
-  background-color: $input-background;
-  border: 1px solid $input-border;
-  color: $input;
+  background-color: $input-background-color;
+  border-color: $input-border-color;
+  color: $input-color;
 
   &:hover,
   &.is-hovered {
-    border-color: $input-hover-border;
+    border-color: $input-hover-border-color;
   }
 
   &:focus,
   &.is-focused,
   &:active,
   &.is-active {
-    border-color: $input-focus-border;
+    border-color: $input-focus-border-color;
   }
 
-  &[disabled],
-  &.is-disabled {
-    background-color: $input-disabled-background;
-    border-color: $input-disabled-border;
+  &[disabled] {
+    background-color: $input-disabled-background-color;
+    border-color: $input-disabled-border-color;
     box-shadow: none;
-    color: $input-disabled;
+    color: $input-disabled-color;
 
     @include placeholder {
-      color: rgba($input, 0.3);
+      color: rgba($input-disabled-color, 0.3);
     }
   }
 }
@@ -55,7 +60,7 @@ $input-radius: $radius !default;
 .textarea {
   @include input;
 
-  box-shadow: inset 0 1px 2px rgba($black, 0.1);
+  box-shadow: $input-shadow;
   max-width: 100%;
   width: 100%;
 
@@ -99,41 +104,39 @@ $input-radius: $radius !default;
 
 .textarea {
   display: block;
-  line-height: 1.25;
-  max-height: 600px;
   max-width: 100%;
-  min-height: 120px;
   min-width: 100%;
-  padding: 10px;
+  padding: 0.625em;
   resize: vertical;
+
+  &:not([rows]) {
+    max-height: 600px;
+    min-height: 120px;
+  }
+
+  &[rows] {
+    height: unset;
+  }
 }
 
 .checkbox,
 .radio {
-  align-items: center;
   cursor: pointer;
-  display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: inline-block;
+  line-height: 1.25;
   position: relative;
-  vertical-align: top;
 
   input {
     cursor: pointer;
-    margin-right: 0.5em;
   }
 
   &:hover {
-    color: $input-hover;
+    color: $input-hover-color;
   }
 
-  &.is-disabled {
-    color: $input-disabled;
-    pointer-events: none;
-
-    input {
-      pointer-events: none;
-    }
+  &[disabled] {
+    color: $input-disabled-color;
+    cursor: not-allowed;
   }
 }
 
@@ -145,17 +148,21 @@ $input-radius: $radius !default;
 
 .select {
   display: inline-block;
-  height: 2.5em;
+  max-width: 100%;
   position: relative;
   vertical-align: top;
 
-  &:after {
-    @include arrow($input-arrow);
+  &:not(.is-multiple) {
+    height: 2.25em;
 
-    margin-top: -0.375em;
-    right: 1.125em;
-    top: 50%;
-    z-index: 4;
+    &::after {
+      @include arrow($input-arrow);
+
+      margin-top: -0.375em;
+      right: 1.125em;
+      top: 50%;
+      z-index: 4;
+    }
   }
 
   select {
@@ -164,22 +171,55 @@ $input-radius: $radius !default;
     cursor: pointer;
     display: block;
     font-size: 1em;
+    max-width: 100%;
     outline: none;
-    padding-right: 2.5em;
 
     &:hover {
-      border-color: $input-hover-border;
+      border-color: $input-hover-border-color;
     }
 
-    &::ms-expand {
+    &:focus,
+    &.is-focused,
+    &:active,
+    &.is-active {
+      border-color: $input-focus-border-color;
+    }
+
+    &::-ms-expand {
       display: none;
+    }
+
+    &[disabled]:hover {
+      border-color: $input-disabled-border-color;
+    }
+
+    &:not([multiple]) {
+      padding-right: 2.5em;
+    }
+
+    &[multiple] {
+      height: unset;
+      padding: 0;
+
+      option {
+        padding: 0.5em 1em;
+      }
     }
   }
 
   // States
   &:hover {
-    &:after {
-      border-color: $input-hover;
+    &::after {
+      border-color: $input-hover-color;
+    }
+  }
+
+  // Colors
+  @each $name, $pair in $colors {
+    $color: nth($pair, 1);
+
+    &.is-#{$name} select {
+      border-color: $color;
     }
   }
 
@@ -197,6 +237,12 @@ $input-radius: $radius !default;
   }
 
   // Modifiers
+  &.is-disabled {
+    &::after {
+      border-color: $input-disabled-color;
+    }
+  }
+
   &.is-fullwidth {
     width: 100%;
 
@@ -204,22 +250,60 @@ $input-radius: $radius !default;
       width: 100%;
     }
   }
+
+  &.is-loading {
+    &::after {
+      @include loader;
+
+      margin-top: 0;
+      position: absolute;
+      right: 0.625em;
+      top: 0.625em;
+      transform: none;
+    }
+
+    &.is-small:after {
+      font-size: $size-small;
+    }
+
+    &.is-medium:after {
+      font-size: $size-medium;
+    }
+
+    &.is-large:after {
+      font-size: $size-large;
+    }
+  }
 }
 
 .label {
-  color: $input;
+  color: $label-color;
   display: block;
-  font-weight: bold;
+  font-size: $size-normal;
+  font-weight: $label-weight;
 
   &:not(:last-child) {
     margin-bottom: 0.5em;
+  }
+
+  // Sizes
+  &.is-small {
+    font-size: $size-small;
+  }
+
+  &.is-medium {
+    font-size: $size-medium;
+  }
+
+  &.is-large {
+    font-size: $size-large;
   }
 }
 
 .help {
   display: block;
-  font-size: $size-small;
-  margin-top: 5px;
+  font-size: $help-size;
+  margin-top: 0.25rem;
 
   @each $name, $pair in $colors {
     $color: nth($pair, 1);
@@ -232,26 +316,7 @@ $input-radius: $radius !default;
 
 // Containers
 
-.control-label {
-  @include mobile {
-    margin-bottom: 0.5em;
-  }
-
-
-  @include tablet {
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 0;
-    margin-right: 1.5em;
-    padding-top: 0.5em;
-    text-align: right;
-  }
-}
-
-.control {
-  position: relative;
-  text-align: left;
-
+.field {
   &:not(:last-child) {
     margin-bottom: 0.75rem;
   }
@@ -261,52 +326,53 @@ $input-radius: $radius !default;
     display: flex;
     justify-content: flex-start;
 
-    .button,
-    .input,
-    .select {
-      border-radius: 0;
-      margin-right: -1px;
-      width: auto;
-
-      &:hover {
-        z-index: 2;
-      }
-
-      &:focus,
-      &:active {
-        z-index: 3;
+    .control {
+      &:not(:last-child) {
+        margin-right: -1px;
       }
 
       &:first-child {
-        border-radius: $input-radius 0 0 $input-radius;
-
-        select {
-          border-radius: $input-radius 0 0 $input-radius;
+        .button,
+        .input,
+        .select select {
+          border-bottom-left-radius: $input-radius;
+          border-top-left-radius: $input-radius;
         }
       }
 
       &:last-child {
-        border-radius: 0 $input-radius $input-radius 0;
+        .button,
+        .input,
+        .select select {
+          border-bottom-right-radius: $input-radius;
+          border-top-right-radius: $input-radius;
+        }
+      }
 
-        select {
-          border-radius: 0 $input-radius $input-radius 0;
+      .button,
+      .input,
+      .select select {
+        border-radius: 0;
+
+        &:hover,
+        &.is-hovered {
+          z-index: 2;
+        }
+
+        &:focus,
+        &.is-focused,
+        &:active,
+        &.is-active {
+          z-index: 3;
+
+          &:hover {
+            z-index: 4;
+          }
         }
       }
 
       &.is-expanded {
         flex-grow: 1;
-        flex-shrink: 0;
-      }
-    }
-
-    .select select {
-      &:hover {
-        z-index: 2;
-      }
-
-      &:focus,
-      &:active {
-        z-index: 3;
       }
     }
 
@@ -319,105 +385,9 @@ $input-radius: $radius !default;
     }
 
     &.has-addons-fullwidth {
-      .button,
-      .input,
-      .select {
+      .control {
         flex-grow: 1;
         flex-shrink: 0;
-      }
-    }
-  }
-
-  &.has-icon {
-    .icon {
-      color: $input-icon;
-      pointer-events: none;
-      position: absolute;
-      top: $size-normal * 2.5 / 2;
-      z-index: 4;
-    }
-
-    .input {
-      &:focus {
-        & + .icon {
-          color: $input-icon-active;
-        }
-      }
-
-      &.is-small {
-        & + .icon {
-          top: $size-small * 2.5 / 2;
-        }
-      }
-
-      &.is-medium {
-        & + .icon {
-          top: $size-medium * 2.5 / 2;
-        }
-      }
-
-      &.is-large {
-        & + .icon {
-          top: $size-large * 2.5 / 2;
-        }
-      }
-    }
-
-    &:not(.has-icon-right) {
-      .icon {
-        left: $size-normal * 2.5 / 2;
-        transform: translateX(-50%) translateY(-50%);
-      }
-
-      .input {
-        padding-left: 2.5em;
-
-        &.is-small {
-          & + .icon {
-            left: $size-small * 2.5 / 2;
-          }
-        }
-
-        &.is-medium {
-          & + .icon {
-            left: $size-medium * 2.5 / 2;
-          }
-        }
-
-        &.is-large {
-          & + .icon {
-            left: $size-large * 2.5 / 2;
-          }
-        }
-      }
-    }
-
-    &.has-icon-right {
-      .icon {
-        right: $size-normal * 2.5 / 2;
-        transform: translateX(50%) translateY(-50%);
-      }
-
-      .input {
-        padding-right: 2.5em;
-
-        &.is-small {
-          & + .icon {
-            right: $size-small * 2.5 / 2;
-          }
-        }
-
-        &.is-medium {
-          & + .icon {
-            right: $size-medium * 2.5 / 2;
-          }
-        }
-
-        &.is-large {
-          & + .icon {
-            right: $size-large * 2.5 / 2;
-          }
-        }
       }
     }
   }
@@ -427,7 +397,6 @@ $input-radius: $radius !default;
     justify-content: flex-start;
 
     & > .control {
-      flex-basis: 0;
       flex-shrink: 0;
 
       &:not(:last-child) {
@@ -448,28 +417,241 @@ $input-radius: $radius !default;
     &.is-grouped-right {
       justify-content: flex-end;
     }
+
+    &.is-grouped-multiline {
+      flex-wrap: wrap;
+
+      & > .control {
+        &:last-child,
+        &:not(:last-child) {
+          margin-bottom: 0.75rem;
+        }
+      }
+
+      &:last-child {
+        margin-bottom: -0.75rem;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 0;
+      }
+    }
   }
 
   &.is-horizontal {
     @include tablet {
       display: flex;
+    }
+  }
+}
 
-      & > .control {
-        display: flex;
-        flex-basis: 0;
-        flex-grow: 5;
-        flex-shrink: 1;
+.field-label {
+  .label {
+    font-size: inherit;
+  }
+
+  @include mobile {
+    margin-bottom: 0.5rem;
+  }
+
+
+  @include tablet {
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-right: 1.5rem;
+    text-align: right;
+
+    &.is-small {
+      font-size: $size-small;
+      padding-top: 0.375em;
+    }
+
+    &.is-normal {
+      padding-top: 0.375em;
+    }
+
+    &.is-medium {
+      font-size: $size-medium;
+      padding-top: 0.375em;
+    }
+
+    &.is-large {
+      font-size: $size-large;
+      padding-top: 0.375em;
+    }
+  }
+}
+
+.field-body {
+  .field .field {
+    margin-bottom: 0;
+  }
+
+  @include tablet {
+    display: flex;
+    flex-basis: 0;
+    flex-grow: 5;
+    flex-shrink: 1;
+
+    .field {
+      margin-bottom: 0;
+    }
+
+    & > .field {
+      flex-shrink: 1;
+
+      &:not(.is-narrow) {
+        flex-grow: 1;
+      }
+
+      &:not(:last-child) {
+        margin-right: 0.75rem;
+      }
+    }
+  }
+}
+
+.control {
+  font-size: $size-normal;
+  position: relative;
+  text-align: left;
+
+  // Modifiers
+  // DEPRECATED
+  &.has-icon {
+    .icon {
+      color: $input-icon-color;
+      height: 2.25em;
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      width: 2.25em;
+      z-index: 4;
+    }
+
+    .input {
+      &:focus {
+        & + .icon {
+          color: $input-icon-active-color;
+        }
+      }
+
+      &.is-small {
+        & + .icon {
+          font-size: $size-small;
+        }
+      }
+
+      &.is-medium {
+        & + .icon {
+          font-size: $size-medium;
+        }
+      }
+
+      &.is-large {
+        & + .icon {
+          font-size: $size-large;
+        }
+      }
+    }
+
+    &:not(.has-icon-right) {
+      .icon {
+        left: 0;
+      }
+
+      .input {
+        padding-left: 2.25em;
+      }
+    }
+
+    &.has-icon-right {
+      .icon {
+        right: 0;
+      }
+
+      .input {
+        padding-right: 2.25em;
       }
     }
   }
 
+  &.has-icons-left,
+  &.has-icons-right {
+    .input,
+    .select {
+      &:focus {
+        & ~ .icon {
+          color: $input-icon-active-color;
+        }
+      }
+
+      &.is-small ~ .icon {
+        font-size: $size-small;
+      }
+
+      &.is-medium ~ .icon {
+        font-size: $size-medium;
+      }
+
+      &.is-large ~ .icon {
+        font-size: $size-large;
+      }
+    }
+
+    .icon {
+      color: $input-icon-color;
+      height: 2.25em;
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      width: 2.25em;
+      z-index: 4;
+    }
+  }
+
+  &.has-icons-left {
+    .input,
+    .select select {
+      padding-left: 2.25em;
+    }
+
+    .icon.is-left {
+      left: 0;
+    }
+  }
+
+  &.has-icons-right {
+    .input,
+    .select select {
+      padding-right: 2.25em;
+    }
+
+    .icon.is-right {
+      right: 0;
+    }
+  }
+
   &.is-loading {
-    &:after {
+    &::after {
       @include loader;
 
       position: absolute !important;
-      right: 0.75em;
-      top: 0.75em;
+      right: 0.625em;
+      top: 0.625em;
+    }
+
+    &.is-small:after {
+      font-size: $size-small;
+    }
+
+    &.is-medium:after {
+      font-size: $size-medium;
+    }
+
+    &.is-large:after {
+      font-size: $size-large;
     }
   }
 }
