--- a/scss/elements/_notification.scss
+++ b/scss/elements/_notification.scss
@@ -1,10 +1,23 @@
+$notification-background-color: $background !default;
+$notification-radius: $radius !default;
+$notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default;
+
 .notification {
   @include block;
 
-  background-color: $background;
-  border-radius: $radius;
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
+  background-color: $notification-background-color;
+  border-radius: $notification-radius;
+  padding: $notification-padding;
   position: relative;
+
+  a:not(.button) {
+    color: currentColor;
+    text-decoration: underline;
+  }
+
+  strong {
+    color: currentColor;
+  }
 
   code,
   pre {
@@ -15,7 +28,7 @@
     background: transparent;
   }
 
-  .delete {
+  & > .delete {
     position: absolute;
     right: 0.5em;
     top: 0.5em;
@@ -24,7 +37,7 @@
   .title,
   .subtitle,
   .content {
-    color: inherit;
+    color: currentColor;
   }
 
   // Colors
