--- a/scss/elements/_title.scss
+++ b/scss/elements/_title.scss
@@ -1,12 +1,14 @@
-$title: $grey-darker !default;
+$title-color: $grey-darker !default;
 $title-size: $size-3 !default;
-$title-weight: $weight-light !default;
-$title-weight-bold: $weight-semibold !default;
+$title-weight: $weight-semibold !default;
+$title-strong-color: inherit !default;
+$title-strong-weight: inherit !default;
 
-$subtitle: $grey-dark !default;
+$subtitle-color: $grey-dark !default;
 $subtitle-size: $size-5 !default;
-$subtitle-strong: $grey-darker !default;
-$subtitle-weight: $weight-light !default;
+$subtitle-weight: $weight-normal !default;
+$subtitle-strong-color: $grey-darker !default;
+$subtitle-strong-weight: $weight-semibold !default;
 
 .title,
 .subtitle {
@@ -16,11 +18,7 @@ $subtitle-weight: $weight-light !default;
 
   em,
   span {
-    font-weight: $title-weight;
-  }
-
-  strong {
-    font-weight: $title-weight-bold;
+    font-weight: inherit;
   }
 
   .tag {
@@ -29,24 +27,25 @@ $subtitle-weight: $weight-light !default;
 }
 
 .title {
-  color: $title;
+  color: $title-color;
   font-size: $title-size;
   font-weight: $title-weight;
   line-height: 1.125;
 
   strong {
-    color: inherit;
+    color: $title-strong-color;
+    font-weight: $title-strong-weight;
   }
 
   & + .highlight {
     margin-top: -0.75rem;
   }
 
-  & + .subtitle {
-    margin-top: -1.25rem;
+  &:not(.is-spaced) + .subtitle {
+    margin-top: -1.5rem;
   }
 
-  // Colors
+  // Sizes
   @each $size in $sizes {
     $i: index($sizes, $size);
 
@@ -57,20 +56,21 @@ $subtitle-weight: $weight-light !default;
 }
 
 .subtitle {
-  color: $subtitle;
+  color: $subtitle-color;
   font-size: $subtitle-size;
   font-weight: $subtitle-weight;
   line-height: 1.25;
 
   strong {
-    color: $subtitle-strong;
+    color: $subtitle-strong-color;
+    font-weight: $subtitle-strong-weight;
   }
 
-  & + .title {
+  &:not(.is-spaced) + .title {
     margin-top: -1.5rem;
   }
 
-  // Colors
+  // Sizes
   @each $size in $sizes {
     $i: index($sizes, $size);
 
