--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,4 +1,6 @@
+$footer-background-color: $background !default;
+
 .footer {
-  background-color: $background;
+  background-color: $footer-background-color;
   padding: 3rem 1.5rem 6rem;
 }
